ADDED + Enchantments added + TelekenesisEnchant + CorruptionEnchant + Added Settings and config.yml
FIXED
= Fixed TreeFallerAbility, no longer causes infinite loop

REMOVED
- Nothing