@@ -2,28 +2,30 @@ package me.michqql.itemabilities.ability;
 
 import me.michqql.itemabilities.ItemAbilityPlugin;
 import me.michqql.itemabilities.ItemAbility;
-import me.michqql.itemabilities.item.ItemGenerator;
+import me.michqql.itemabilities.event.AbilityBreakBlockEvent;
 import me.michqql.itemabilities.item.ItemModifier;
+import me.michqql.itemabilities.item.item.RealItem;
 import me.michqql.itemabilities.util.Pair;
+import org.bukkit.Bukkit;
 import org.bukkit.Material;
-import org.bukkit.Sound;
-import org.bukkit.World;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
+import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.block.BlockBreakEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.scheduler.BukkitRunnable;
 
-import java.util.Arrays;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Queue;
+import java.util.*;
 
 public class TreeFallerAbility extends ItemAbility {
 
+    private final int MAX_BLOCK_UPDATES_PER_TICK = 4;
+    private final static int MAX_BLOCK_UPDATES = 30;
     private final static List<Material> WOOD_BLOCKS = Arrays.asList(
             Material.ACACIA_LOG,
+            Material.STRIPPED_ACACIA_LOG,
+            Material.ACACIA_WOOD,
             Material.BIRCH_LOG,
             Material.DARK_OAK_LOG,
             Material.JUNGLE_LOG,
@@ -31,78 +33,85 @@ public class TreeFallerAbility extends ItemAbility {
             Material.SPRUCE_LOG
     );
 
-    private final int MAX_BLOCK_UPDATES_PER_TICK = 4;
-
     public TreeFallerAbility(ItemAbilityPlugin plugin) {
         super(plugin, "tree_faller");
     }
 
     @EventHandler
     public void onBlockBreak(BlockBreakEvent e) {
+        final Player player = e.getPlayer();
+
         // Player must be holding correct item in hand
-        Pair<Boolean, ItemStack> item = isPlayerHoldingCorrectItem(e.getPlayer(), false);
+        Pair<Boolean, ItemStack> item = isPlayerHoldingCorrectItem(player, false);
         if(!item.key)
             return;
 
-        Block block = e.getBlock();
-
-        if(!isBlockWood(block)) {
+        final Block block = e.getBlock();
+        if(!isLogBlock(block)) {
             return;
         }
 
+        // Cancelling the event lets other components know not to interact with this
+        // E.g., telekenesis enchantment should not listen to block break event,
+        //       as this would cause duplication of item
         e.setCancelled(true);
 
+        final RealItem realItem = ItemModifier.getItemData(item.value);
         ItemModifier.getAndSetPropertyValue(item.value, "uses", (value) -> {
             int remaining = value.intValue() - 1;
             if(remaining <= 0) {
                 // break item
-                return null;
+                return remaining;
             }
-            System.out.println("Remaining uses: " + remaining);
             return remaining;
         });
-        ItemGenerator.updateItem(item.value);
 
-        final World world = block.getWorld();
         new BukkitRunnable() {
-
-            int blockUpdates;
-            Block current = block;
-            final Queue<Block> toVisit = new LinkedList<>();
-
+            final Queue<Block> toVisit = new LinkedList<>(List.of(block));
+            int tickUpdates;
+            int totalBlockUpdates;
             @Override
             public void run() {
-                blockUpdates = 0;
+                tickUpdates = 0;
 
-                checkBlock(current);
+                while(toVisit.size() > 0 && tickUpdates < MAX_BLOCK_UPDATES_PER_TICK
+                        && totalBlockUpdates < MAX_BLOCK_UPDATES) {
+                    tickUpdates++;
+                    totalBlockUpdates++;
 
-                while(toVisit.size() > 0 && blockUpdates < MAX_BLOCK_UPDATES_PER_TICK) {
-                    current = toVisit.poll();
-                    checkBlock(current);
+                    Block current = toVisit.poll();
+                    if(current == null)
+                        break;
+
+                    AbilityBreakBlockEvent result = callAbilityBreakBlockEvent(player, realItem, current);
+                    if(result.isBlockDrop()) {
+                        // This line can cause recursion problems as this will invoke BlockBreakEvent
+                        // if calling player.breakBlock(current)
+                        current.breakNaturally();
+                    } else {
+                        current.setType(Material.AIR);
+                    }
+
+                    List<Block> adjacent = getAdjacentBlocks(current);
+                    for(Block other : adjacent) {
+                        if(isLogBlock(other)) {
+                            toVisit.add(other);
+                        }
+                    }
                 }
-            }
 
-            private void checkBlock(Block block) {
-                if(isBlockWood(current)) {
-                    block.breakNaturally();
-                    world.playSound(block.getLocation(), Sound.BLOCK_LAVA_POP, 1.0f, 1.5f);
-                    blockUpdates++;
-                }
-
-                for(Block b : getRelativeBlocks(current)) {
-                    if(isBlockWood(b) && !toVisit.contains(b))
-                        toVisit.add(b);
-                }
+                if(toVisit.isEmpty() || totalBlockUpdates >= MAX_BLOCK_UPDATES)
+                    this.cancel();
             }
         }.runTaskTimer(plugin, 0L, 1L);
     }
 
-    private boolean isBlockWood(Block block) {
+    private boolean isLogBlock(Block block) {
         return WOOD_BLOCKS.contains(block.getType());
     }
 
-    private List<Block> getRelativeBlocks(Block block) {
-        return Arrays.asList(
+    private List<Block> getAdjacentBlocks(Block block) {
+        return List.of(
                 block.getRelative(BlockFace.UP),
                 block.getRelative(BlockFace.DOWN),
                 block.getRelative(BlockFace.NORTH),
@@ -110,5 +119,17 @@ public class TreeFallerAbility extends ItemAbility {
                 block.getRelative(BlockFace.SOUTH),
                 block.getRelative(BlockFace.WEST)
         );
+    }
+
+    private AbilityBreakBlockEvent callAbilityBreakBlockEvent(Player player, RealItem item, Block block) {
+        AbilityBreakBlockEvent event = new AbilityBreakBlockEvent(
+                player,
+                this,
+                item,
+                block
+        );
+        System.out.println("Calling event");
+        Bukkit.getPluginManager().callEvent(event);
+        return event;
     }
 }
